--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "temp_map",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://DmShko.github.io/temp_map/",
   "type": "module",
   "scripts": {
     "dev": "vite",
